syntax = "proto3";
package proto.storage;

option go_package = "github.com/spinnaker/kleat/api/client/storage";

import "storage/azs.proto";
import "storage/gcs.proto";
import "storage/oracle.proto";

// Configuration of Spinnaker's persistent storage.
message PersistentStorage {
    GcsPersistentStore gcs = 1;
    AzsPersistentStore azs = 2;
    OraclePersistentStore oracle = 3;
}